--- a/IND-FoodZone/IND-FoodZone/index.html
+++ b/IND-FoodZone/IND-FoodZone/index.html
@@ -60,7 +60,7 @@
                 </h2>
             </div>
             <div class="about-img">
-                <img src="./img/Thali.jpg" alt="About Us">
+                <iframe width="500px" height="300px" src="https://www.youtube.com/embed/2-5du2oVM5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
         </div>
